--- a/src/team.html
+++ b/src/team.html
@@ -34,9 +34,12 @@
       <div class="gallery">
         <h3>CEO</h3>
         <div class = "images">
-          <img src="../images/team_pratyush.jpg">
+          <img src="../images/team_pratyush.jpg" id="dp">
           <a href="https://www.linkedin.com">
             <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1">
           </a>
         </div>
         <div style="padding: 2%;">Pratyush Giri</div>
@@ -46,9 +49,12 @@
       <div class="gallery">
         <h3>CFO</h3>
         <div class = "images">
-          <img src="../images/team_piyush.jpg">
+          <img src="../images/team_piyush.jpg" id="dp">
           <a href="https://www.linkedin.com">
             <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1">
           </a>
         </div>
         <div style="padding: 2%;">Piyush Bansal</div>
@@ -60,9 +66,12 @@
       <div class="gallery">
         <h3>CCO</h3>
         <div class = "images">
-          <img src="../images/team_amartya.jpeg">
+          <img src="../images/team_amartya.jpeg" id="dp">
           <a href="https://www.linkedin.com">
             <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1">
           </a>
         </div>
         <div style="padding: 2%;">Amartya Gupta</div>
@@ -72,9 +81,12 @@
       <div class="gallery">
         <h3>CTO</h3>
         <div class = "images">
-          <img src="../images/team_jeshventh.jpg">
+          <img src="../images/team_jeshventh.jpg" id="dp">
           <a href="https://www.linkedin.com">
             <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1">
           </a>
         </div>
         <div style="padding: 2%;">Jeshventh TK Raja</div>
@@ -93,9 +105,12 @@
       <div class="gallery">
         <h3>Tech Lead - EC</h3>
         <div class = "images">
-          <img src="../images/team_tarun.jpg">
+          <img src="../images/team_tarun.jpg" id="dp">
           <a href="https://www.linkedin.com">
             <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1">
           </a>
         </div>
         <div style="padding: 2%;">Tarun Mittal</div>
@@ -105,9 +120,12 @@
       <div class="gallery">
         <h3>Tech Lead - CS</h3>
         <div class = "images">
-          <img src="../images/team_hrishi.jpg">
+          <img src="../images/team_hrishi.jpg" id="dp">
           <a href="https://www.linkedin.com">
             <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1">
           </a>
         </div>
         <div style="padding: 2%;">Hrishi Hiraskar</div>
@@ -119,9 +137,12 @@
       <div class="gallery">
         <h3>Tech Support</h3>
         <div class = "images">
-          <img src="../images/team_salman.jpg">
+          <img src="../images/team_salman.jpg" id="dp">
           <a href="https://www.linkedin.com">
             <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1">
           </a>
         </div>
         <div style="padding: 2%;">Salman Shah</div>
@@ -131,9 +152,12 @@
       <div class="gallery">
         <h3>Tech Support</h3>
         <div class = "images">
-          <img src="../images/team_rohan.jpg">
+          <img src="../images/team_rohan.jpg" id="dp">
           <a href="https://www.linkedin.com">
             <img src="../images/linkedin-logo.png" id="social-media">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="../images/fb-logo.png" id="social-media1">
           </a>
         </div>
         <div style="padding: 2%;">Rohan Surve</div>
