Header and footer updated

--- a/src/team.html
+++ b/src/team.html
@@ -12,18 +12,18 @@
 
 
 	<header>
-	  <div class="head-container">
-	  <a href="#" id="logo"><h1>Wheels On Roll</h1></a>
-	  <nav>
-		<a id="menu-icon"><img src="images/menu-icon.png"></a>
-		<ul>
-		  <li><a href="../index.html">Home</a></li>
-		  <li><a href="services.html">Services</a></li>
-		  <li><a href="#">Team</a></li>
-		</ul>
-	  </nav>
-	  </div>
-    </header>
+    <div class="head-container">
+    <a href="#" id="logo"><h1>Wheels On Roll</h1></a>
+    <nav>
+    <a id="menu-icon"><img src="../images/menu-icon.png"></a>
+    <ul>
+      <li><a href="../index.html#about">About</a></li>
+      <li><a href="../index.html#services">Services</a></li>
+      <li><a href="#">Team</a></li>
+    </ul>
+    </nav>
+    </div>
+  </header>
 
 	<div class="container" id="gallery" style="display: table;">
 
@@ -168,25 +168,23 @@
   </div>
   
 	<div class="footer">
-		<div class="container" id="about">
-			<div class="navi">
-				<ul>
-				  <div style="padding-bottom: 20px;">Navigation<br></div>
-				  <li><a href="../index.html">Home</a></li>
-				  <li><a href="services.html">Services</a></li>
-          <li><a href="#">Team</a></li>
-				  <li id="a-top"><a href="#">Top</a></li>
-				</ul>
-			</div>
-			<div class="about">
-				<h4>Wheels On Roll</h4>
-				<p>An NITK Startup</p>
-				<p>Our Quest to change the world</p>
-				<a href="github.com/Hrily">GitHub</a>
-			</div>	
-		</div>
-	</div>
-
+    <div class="container" id="about">
+      <div class="navi">
+        <ul>
+            <li><a href="../index.html#about">About</a></li>
+              <li><a href="../index.html#services">Services</a></li>
+              <li><a href="#">Team</a></li>         
+              <li><a href="javascript:window.scroll({top:0, behavior:'smooth'})">Top</a></li>
+        </ul>
+      </div>
+      <div class="about">
+        <h4>Wheels On Roll</h4>
+        <p>An NITK Startup</p>
+        <p>Our quest to create a Pollution-Free world</p>
+        <p><a href="https://www.facebook.com/Wheelsonroll"><img src="../images/fb-logo.png" height="40px" /></a></p>
+      </div>
+    </div>
+  </div>
 
   </center></body>
 </html>
