--- a/index.html
+++ b/index.html
@@ -126,28 +126,28 @@
     <h1 class="label">Services</h1>
 
     <div class="service">
-      <img src="images/rental.png" width="9%" />
+      <img src="images/rental.png"/>
       <span>
       <h3 class="label">Automated Rental Services</h3>
       Enhancing the cycling rental services by Digitally enabling Automated Cycle Rental Services alongwith advance locking Mechanism.
       </span>
     </div>
     <div class="service">
-      <img src="images/lease.png" width="8%" style="left: 0.5%" />
+      <img src="images/lease.png"/>
       <span>
       <h3 class="label">Lease Services</h3>
       Providing the cycles on lease to campus inmates for a stipulated time, flexible according to customer need.
       </span>
     </div>
     <div class="service">
-      <img src="images/events.png" width="8%" />
+      <img src="images/events.png"/>
       <span>
       <h3 class="label">Service for Events</h3>
       Undertake easy to rent policy for events or activities of shorter duration.
       </span>
     </div>
     <div class="service">
-      <img src="images/repair.png" width="8%" />
+      <img src="images/repair.png"/>
       <span>
       <h3 class="label">Repair Services</h3>
       Providing mechanical assistance to all the cycles in the campus where in WOR customers enjoy added benefits
