--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   <body onload="start_rolling()"><center>
 
 
-  <!--  Replace with Carousel with timer --> 
-  	<img src="images/cycle.jpg" class="bg-img">
-  	<div class="title"><b>Wheels On Roll</b></div>
+  <!--  Replace with Carousel with timer 
+  	<img src="images/cycle.jpg" class="bg-img">--> 
+    <div class="bg-img">
+  	 <div class="title"><b>Wheels On Roll</b></div>
+    </div>
     <img src="images/arrow-down.png" id="arrow" onclick="goTo('about')" />
 
 
