Load Team data from JSON, team.html optimized for mobile

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				<h4>Wheels On Roll</h4>
 				<p>An NITK Startup</p>
 				<p>Our quest to create a Pollution-Free world</p>
-        <p><a href="https://www.facebook.com/Wheelsonroll"><img src="images/fb-logo.png" height="40px" /></a></p>
+        <p><a href="https://www.facebook.com/Wheelsonroll"><img src="images/logo_fb_white.png" height="40px" /></a></p>
 			</div>
 			
 		</div>
