--- a/src/team.html
+++ b/src/team.html
@@ -256,8 +256,8 @@
       </div>
       <div class="about">
         <h4>Wheels On Roll</h4>
-        <p>An NITK Startup</p>
-        <p>Our quest to create a Pollution-Free world</p>
+        <p>WOR - Office, STEP - NITK Beach Road, Western Campus,</p>
+        <p>NITK, Surathkal, Mangalore - 575025</p>
         <p><a href="https://www.facebook.com/Wheelsonroll"><img src="../images/logo_fb_white.png" height="40px" /></a></p>
       </div>
     </div>
